# dojo

./: .gitignore  Makefile  PROBLEMAS.md  README  README.md  TITLE  generate.sh
01_03_2011/: participantes.txt  problemas.txt
08_02_2011/: test_ocr.py
2011_02_08/: PARTICIPANTES  ocr.py
2011_02_15/: RETROSPECTIVA  wordwrap.py
2011_02_22/: README  RETROSPECTIVA
2011_03_01/: README.markdown  RETROSPECTIVA  participantes.txt  test_primas.py
2011_03_04/: count_and_say.py  participantes.rst  test_fizzbuzz.py
2011_03_10/: RETROSPECTIVA  codigo.py  test.py
2011_03_15/: PARTICIPANTES  README  bowling.rb
2011_03_16/: README  RETROSPECTIVA
2011_03_23/: .sugestoes_de_problemas.txt.swp  README.rst  test_anobissexto.py
2011_04_13/: codigo.py  readme.rst  retrospectiva.rst
2011_04_20/: codigo.py  participantes.rst  test.py
2011_07_12/: expressao_matematica.py  participantes.rst  retrospectiva.rst
2011_07_19/: Makefile  problem.c  retrospectiva.txt
2011_08_09/: primas.py  retrospectiva.markdown
2011_08_16/: RETROSPECTIVA.md
2011_10_19/: codigo.py  test.py
2012_03_06/: problemas
2012_03_14/: retrospectiva.txt  test_encontrar_telefone.py
2012_03_27/: RETROSPECTIVA  test_fatorial.py
2013_06_26/: problema.rst
2013_08_07/: detetive.go  (+1 more)
2014/junho/2014_06_11/src/: 100doors.cabal  HundredDoors.hs  Makefile
2014_07_03/src/: Makefile  ParentalTesting.hs  Test.hs  parentalTesting.cabal
2015_01_27/: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac
2015_01_27/src/: Makefile.am  stack.h
2015_01_27/tests/: Makefile.am  check_stack.c
(+993 files in other folders)
